# endfield-AIC-sim

./: .gitignore  README.md  main.py  pyproject.toml
simulation/: __init__.py  base.py  controller.py  item.py
simulation/components/: __init__.py  base.py  component.py  context.py  converger.py  conveyor.py  sink.py  source.py  splitter.py
simulation/item/: __init__.py  exception.py  inventory.py  item.py  item_stack.py
simulation/test/: test_simulation.py
simulation/units/: __init__.py  base.py  storage_box.py  unit.py
tests/components/: test_converger.py  test_conveyor.py  test_splitter.py
tests/simulation/: test_priority.py  test_rational_splitter.py  utils.py
tests/simulation/components/: test_converger.py  test_conveyor.py  test_splitter.py
tests/simulation/units/: test_storage_box.py
visualization/: enum.py  grid.py  wrapper.py
