[project]
name = "simulation-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true